k8s/deployment.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
      name: web-app
  spec:
      replicas: 2
      selector:
        matchLabels:
          app: web-app
      template:
        metadata:
          labels:
            app: web-app
        spec:
          containers:
          - name: web-app
            image: mydockerhub/web-app:latest
            ports:
            - containerPort: 80
