k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
      name: web-app-service
spec:
      selector:
        app: web-app
      ports:
      - protocol: TCP
        port: 80
        targetPort: 80
      type: LoadBalancer
